--- a/app/src/main/res/layout/subscription_element.xml
+++ b/app/src/main/res/layout/subscription_element.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/subscriptionElementLayout"
     style="@style/block"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:padding="5dp"
+    android:layout_margin="8dp"
+    android:padding="8dp"
     android:background="@drawable/block_text"
     tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.adapters.elements.SubscriptionElement">
 
@@ -23,14 +24,17 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:textColor="@color/black"
+        android:layout_margin="8dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:text="@string/name" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/unsubscribeSubscriptionElementBtn"
-        style="@style/smallButton"
-        android:layout_gravity="center"
-        android:text="Отписаться" />
+    <CheckBox
+        android:id="@+id/subscribeSubscriptionElementCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:button="@drawable/selector_heart"
+        app:buttonTint="@color/darkBlue" />
 
 </LinearLayout>
