--- a/app/src/main/res/layout/part_top_panel.xml
+++ b/app/src/main/res/layout/part_top_panel.xml
@@ -6,8 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/mainBlue"
-    app:menu="@menu/top_navigation_menu"
+    android:padding="4dp"
     app:layout_constraintTop_toTopOf="parent"
+    app:menu="@menu/top_navigation_menu"
     app:navigationIcon="@drawable/icon_back">
 
     <TextView
@@ -21,10 +22,9 @@
 
         <ImageView
             android:id="@+id/avatarTopPanelImage"
-            tools:srcCompat="@tools:sample/avatars"
-            android:layout_width="@dimen/photo_avatar_height"
+            android:layout_width="@dimen/photo_avatar_width"
             android:layout_height="@dimen/photo_avatar_height"
             android:layout_gravity="center"
-            android:layout_marginEnd="3dp" />
+            tools:srcCompat="@tools:sample/avatars" />
     </LinearLayout>
 </com.google.android.material.appbar.MaterialToolbar>
