--- a/app/src/main/res/layout/activity_current_comment.xml
+++ b/app/src/main/res/layout/activity_current_comment.xml
@@ -1,72 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    style="@style/block"
+    android:layout_width="wrap_content"
+    android:layout_height="100dp"
+    android:orientation="horizontal"
     tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.comments.CurrentCommentActivity">
+
+
+    <ImageView
+        android:id="@+id/avatarCurrentCommentActivityImage"
+        android:layout_width="@dimen/photo_avatar_width"
+        android:layout_height="@dimen/photo_avatar_height"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/avatarCurrentCommentActivityImage"
-            android:layout_width="@dimen/photo_avatar_width"
-            android:layout_height="@dimen/photo_avatar_height"
-            tools:srcCompat="@tools:sample/avatars" />
+        <TextView
+            android:id="@+id/userNameCurrentCommentActivityText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Имя пользователя"
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
 
             <TextView
-                android:id="@+id/userNameCurrentCommentActivityText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="18sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp">
-
-                <TextView
-                    android:id="@+id/reviewCurrentCommentActivityText"
-                    style="@style/defaultTextMainScreen"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="5dp" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="2">
-
-            <TextView
-                android:id="@+id/serviceNameCurrentCommentActivityText"
+                android:id="@+id/reviewCurrentCommentActivityText"
                 style="@style/defaultTextMainScreen"
-                android:layout_width="80dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text=""
-                android:visibility="gone" />
-
-            <RatingBar
-                android:id="@+id/ratingCurrentCommentActivityBar"
-                style="@android:style/Widget.Holo.RatingBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:isIndicator="true"
-                android:theme="@style/ratingBarColors" />
+                android:text="text"
+                />
         </LinearLayout>
-
     </LinearLayout>
+
+    <RatingBar
+        android:id="@+id/ratingCurrentCommentActivityBar"
+        style="@android:style/Widget.Holo.RatingBar.Small"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:isIndicator="true"
+        android:theme="@style/ratingBarColors" />
+
 
 </LinearLayout>
