--- a/app/src/main/res/layout/fragment_service_photo.xml
+++ b/app/src/main/res/layout/fragment_service_photo.xml
@@ -5,7 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.adapters.elements.ServicePhotoElement">
+    tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.adapters.elements.ServicePhotoFragment">
 
     <ImageView
         android:id="@+id/imageServicePhotoElementImage"
