--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,183 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/collapsingProfileLayout"
     style="@style/allPages"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_constraintTop_toTopOf="parent"
     tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.profile.ProfileActivity">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/collapsingProfileLayout"
+    <ProgressBar
+        android:id="@+id/loadingProfileProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:translationZ="5dp" />
+
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ProgressBar
-            android:id="@+id/loadingProfileProgressBar"
-            android:translationZ="5dp"
-            android:layout_width="match_parent"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content" />
-
-        <com.google.android.material.appbar.AppBarLayout
+        <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent">
+            android:fitsSystemWindows="true"
+            app:layout_scrollFlags="scroll|enterAlways|snap">
 
-            <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fitsSystemWindows="true"
-                app:layout_scrollFlags="scroll|enterAlways|snap">
+            <LinearLayout
+                style="@style/wideVerticalBlock"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.5">
+
+                <include layout="@layout/part_top_panel" />
 
                 <LinearLayout
+                    android:id="@+id/infoProfileLayout"
                     style="@style/wideVerticalBlock"
-                    app:layout_collapseMode="parallax"
-                    app:layout_collapseParallaxMultiplier="0.5">
-
-                    <include layout="@layout/part_top_panel" />
+                    android:background="@color/mainBlue"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/topPanel">
 
                     <LinearLayout
-                        android:id="@+id/infoProfileLayout"
-                        style="@style/wideVerticalBlock"
-                        android:background="@color/mainBlue"
-                        app:layout_constraintStart_toStartOf="parent"
+                        style="@style/wideHorizontalBlock"
                         app:layout_constraintTop_toBottomOf="@id/topPanel">
 
+                        <RelativeLayout
+                            style="@style/highHorizontalBlock"
+                            android:layout_weight="1"
+                            android:gravity="end|center">
+
+                            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                                style="@style/actionButton"
+                                android:visibility="invisible" />
+
+                            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                                android:id="@+id/subscribeProfileBtn"
+                                style="@style/actionButton"
+                                app:srcCompat="@drawable/icon_heart_outline" />
+
+                            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                                android:id="@+id/subscriptionsProfileBtn"
+                                style="@style/actionButton"
+                                app:srcCompat="@drawable/icon_subscriptions" />
+                        </RelativeLayout>
+
+                        <ImageView
+                            android:id="@+id/avatarProfileImage"
+                            style="@style/profileAvatar"
+                            android:layout_weight="1"
+                            tools:srcCompat="@tools:sample/avatars" />
+
+                        <RelativeLayout
+                            style="@style/highHorizontalBlock"
+                            android:layout_weight="1"
+                            android:gravity="start|center">
+
+                            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                                style="@style/actionButton"
+                                android:visibility="invisible" />
+
+                            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                                android:id="@+id/dialogsProfileBtn"
+                                style="@style/actionButton"
+                                app:srcCompat="@drawable/icon_dialog" />
+
+                            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                                android:id="@+id/scheduleProfileBtn"
+                                style="@style/actionButton"
+                                app:srcCompat="@drawable/icon_schedule" />
+                        </RelativeLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        style="@style/wideVerticalBlock"
+                        android:gravity="center"
+                        android:padding="5dp">
+
+                        <TextView
+                            android:id="@+id/fullNameProfileText"
+                            style="@style/profileMediumText"
+                            android:text="Name Surname" />
+
+                        <TextView
+                            android:id="@+id/cityProfileText"
+                            style="@style/profileThinText"
+                            android:text="City" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        style="@style/wideHorizontalBlock"
+                        android:baselineAligned="false"
+                        android:padding="5dp">
+
                         <LinearLayout
                             style="@style/wideHorizontalBlock"
-                            app:layout_constraintTop_toBottomOf="@id/topPanel">
-
-                            <RelativeLayout
-                                style="@style/highHorizontalBlock"
-                                android:layout_weight="1"
-                                android:gravity="end|center">
-
-                                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                                    style="@style/actionButton"
-                                    android:visibility="invisible" />
-
-                                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                                    android:id="@+id/subscribeProfileBtn"
-                                    style="@style/actionButton"
-                                    app:srcCompat="@drawable/icon_heart_outline" />
-
-                                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                                    android:id="@+id/subscriptionsProfileBtn"
-                                    style="@style/actionButton"
-                                    app:srcCompat="@drawable/icon_subscriptions" />
-                            </RelativeLayout>
-
-                            <ImageView
-                                android:id="@+id/avatarProfileImage"
-                                style="@style/profileAvatar"
-                                android:layout_weight="1"
-                                tools:srcCompat="@tools:sample/avatars" />
-
-                            <RelativeLayout
-                                style="@style/highHorizontalBlock"
-                                android:layout_weight="1"
-                                android:gravity="start|center">
-
-                                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                                    style="@style/actionButton"
-                                    android:visibility="invisible" />
-
-                                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                                    android:id="@+id/dialogsProfileBtn"
-                                    style="@style/actionButton"
-                                    app:srcCompat="@drawable/icon_dialog" />
-
-                                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                                    android:id="@+id/scheduleProfileBtn"
-                                    style="@style/actionButton"
-                                    app:srcCompat="@drawable/icon_schedule" />
-                            </RelativeLayout>
-                        </LinearLayout>
-
-                        <LinearLayout
-                            style="@style/wideVerticalBlock"
-                            android:gravity="center"
-                            android:padding="5dp">
+                            android:layout_weight="1"
+                            android:gravity="center">
 
                             <TextView
-                                android:id="@+id/fullNameProfileText"
-                                style="@style/profileMediumText"
-                                android:text="Name Surname" />
-
-                            <TextView
-                                android:id="@+id/cityProfileText"
+                                android:id="@+id/subscribersProfileText"
                                 style="@style/profileThinText"
-                                android:text="City" />
+                                android:text="Подписчики:" />
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/ratingProfileLayout"
                             style="@style/wideHorizontalBlock"
-                            android:baselineAligned="false"
-                            android:padding="5dp">
+                            android:layout_weight="1"
+                            android:gravity="center">
 
-                            <LinearLayout
-                                style="@style/wideHorizontalBlock"
-                                android:layout_weight="1"
-                                android:gravity="center">
+                            <RatingBar
+                                android:id="@+id/profileRatingBar"
+                                style="@android:style/Widget.Holo.RatingBar.Small"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginEnd="5dp"
+                                android:theme="@style/ratingBarColors" />
 
-                                <TextView
-                                    android:id="@+id/subscribersProfileText"
-                                    style="@style/profileThinText"
-                                    android:text="Подписчики:" />
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:id="@+id/ratingProfileLayout"
-                                style="@style/wideHorizontalBlock"
-                                android:layout_weight="1"
-                                android:gravity="center">
-
-                                <RatingBar
-                                    android:id="@+id/profileRatingBar"
-                                    style="@android:style/Widget.Holo.RatingBar.Small"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginEnd="5dp"
-                                    android:theme="@style/ratingBarColors" />
-
-                                <TextView
-                                    android:id="@+id/ratingProfileText"
-                                    style="@style/profileThinText"
-                                    android:text="0 (0)" />
-                            </LinearLayout>
+                            <TextView
+                                android:id="@+id/ratingProfileText"
+                                style="@style/profileThinText"
+                                android:text="0 (0)" />
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
+            </LinearLayout>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/profileTabLayout"
-                style="@style/tabs">
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/profileTabLayout"
+            style="@style/tabs">
 
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Записи" />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Записи" />
 
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Услуги" />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Услуги" />
 
-            </com.google.android.material.tabs.TabLayout>
-        </com.google.android.material.appbar.AppBarLayout>
+        </com.google.android.material.tabs.TabLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.CustomViewPager
-            android:id="@+id/profileViewPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/bottom_panel_height"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.CustomViewPager
+        android:id="@+id/profileViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/bottom_panel_height"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <include layout="@layout/part_bottom_panel" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
