--- a/app/src/main/res/layout/part_bottom_panel.xml
+++ b/app/src/main/res/layout/part_bottom_panel.xml
@@ -3,5 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottomPanel"
     style="@style/bottomNavigation"
+    android:layout_gravity="bottom"
     app:layout_constraintBottom_toBottomOf="parent"
     app:menu="@menu/bottom_navigation_menu" />
